# MiniFlow

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  VIBEVOICE_FIXES_README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deploy-staging-gcp.yml  deploy-staging.yml  destroy-staging-gcp.yml  docker.yml  integration.yml  lint.yml  linting_formatting.yml  unit-tests.yml
Benchmark/baseline/baseline_67ecd4/: config.yml  metadata.json  raw_logs.jsonl  report.md  summary.json  warmup1.json  warmup2.json  warmup3.json
configs/: 2_TTS-to-vibevoice.yml  3_TTS-to-vibevoice.yml  baseline.yml  metrics.yml  sweep_example.yaml
configs/env/: dev.yml  prod.yml  staging.yml
docs/: ARCHITECTURE.md  VIBEVOICE_FIXES_README.md  cloud-fallback-checklist.md  deploy.md  postmortem-template.md  project_page.html  resources_for_inspiration.md  runbook.md  runtime_benchmark_metric_mapping.md  slo.md  usable_torch.cuda_api.md
docs/benchmark_framework/: FRAGMENTATION_EXPERIMENT_PLAN.md  benchmark_implementation.md  benchmark_progress.md  benchmark_tickets.md  benchmarking_plan.md  flash_att_impl_plan.md
docs/codex/: DEPLOYMENT_PR_STACK.md  pipeline_instrumentation_migration.md  system_desing_lock.md
docs/development/: linting-formatting.md  pre-commit-hooks.md  setup.md
docs/docker/: CHEATSHEET.md  COMPOSE.md  DOCKERIGNORE.md  GUIDE.md
docs/kimi/: BENCHMARK_OPENTELEMETRY_INTEGRATION.md  CLOUDWATCH_ANALYSIS.md  COMPONENT_INVENTORY.md  FEEDBACK_COST_SECTION.md  FREE_STUDENT_DEPLOYMENT_GUIDE.md  OBSERVABILITY_STRATEGY_REVIEW.md  PLAN_REVIEW.md  PRD.md  RESEARCH_BENCHMARK_POSITIONING.md  SYSTEM_DESIGN.md  deep_research_prompt.md  deep_research_result.md
docs/learning/: PROJECT_STATUS.md  README.md  gcp-foundations.md  gcp-infrastructure-changes.md  gcp-setup-explained.md  gcp-setup-guide.md  gcp-wif-iam-zero-context-guide.md
docs/minimax/: minimax_recommendation.md
infra/aws/terraform/: README.md  main.tf  outputs.tf  variables.tf
infra/gcp/: setup_gcp.sh
infra/gcp/scripts/: fix_wif_iam_permissions.sh  preflight_deploy_gcp.sh
infra/gcp/terraform/: README.md  compute-gpu.tf  find-gpu-zone.sh  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: integration-tests-local.yml  validate_pr.py
src/: app.py  baseline_pipeline.py  benchmark.py  metrics.py  prepare_data.py  sts_pipeline.py  utils.py
src/benchmark/: gpu_sampler.py  runner.py  sweep_runner.py
src/benchmark/collectors/: __init__.py  benchmark_collector.py  context_managers.py  decorators.py  trial_models.py
src/benchmark/config/: defaults.py  loader.py  validation.py
src/benchmark/core/: base.py  registry.py
src/benchmark/metrics/: __init__.py  hardware.py  lifecycle.py  quality.py  result_models.py  timing.py  tokens.py
src/benchmark/runner/: __init__.py  experiment_runner.py  summary_models.py  sweep_runner.py
src/benchmark/storage/: __init__.py  base.py  jsonl_storage.py
src/concurrency/: concurrency_runner.py
src/config/: inspect_config.py  load_config.py  path_utils.py  settings.py
src/debug_scripts/: common.py  debug_asr.py  debug_benchmark.py  debug_llm.py  debug_process_sample.py  debug_tts.py
src/instrumentation/: __init__.py  interfaces.py
src/instrumentation/adapters/: __init__.py  benchmark_adapter.py  null_instrumentation.py  runtime_telemetry_adapter.py
src/llm/: llm_pipeline.py
src/logger/: logging.py
src/observability/: __init__.py  metrics.py  tracing.py
src/report/: html_generator.py  plotting.py  report_generator.py  sweep_report_generator.py
src/scripts/: compare_benchmarks.py  generate_experiment_report.py  generate_html_report.py  generate_sweep_report.py  run_concurrency.py  run_experiment.py  run_sweep.py
src/stt/: stt_pipeline.py
src/tests/: test_asr.py  test_llm.py  test_tts.py
src/tts/: cosyvoice.py  tts_pipelines.py  vibevoice.py  vibevoice_compatibility_utils.py  xtts.py
tests/: conftest.py
tests/integration_tests/api/: test_health.py  test_metrics.py  test_s2s.py  test_ws.py
(+27 files in other folders)
