[project]
name = "miniflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "fastapi[standard]>=0.120.2",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
