[project]
name = "miniflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "coqui-tts>=0.27.0",
    "datasets>=4.3.0",
    "fastapi[standard]>=0.120.2",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "nvitop>=1.6.2",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "utmosv2",
    "vibevoice",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2.git" }
vibevoice = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = [
    "vibevoice",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
